Sun Apr 25 19:00:20 BST 2004 Scott James Remnant <scott@netsplit.com>

  * version-nr, debian/changelog: Bump version to 1.10.22.

Sun Apr 25 18:02:34 BST 2004 Scott James Remnant <scott@netsplit.com>

  * scripts/install-info.pl: Add --dir-file option for compatibility
  with GNU install-info.  Correct code to break infinite loop.

Sun Apr 25 17:57:46 BST 2004 Scott James Remnant <scott@netsplit.com>

  * scripts/dpkg-divert.8: Document that diverting shared libraries
  can be troublesome when combined with ldconfig.

Sun Apr 25 17:53:06 BST 2004 Scott James Remnant <scott@netsplit.com>

  * scripts/dpkg-checkbuilddeps.1: This script no longer checks for
  build-essential, so don't document that it does.

Sun Apr 25 17:45:47 BST 2004 Scott James Remnant <scott@netsplit.com>

  * scripts/dpkg-genchanges.pl: Group the -o expression to find
  using braces.

Sun Apr 25 17:17:16 BST 2004 Scott James Remnant <scott@netsplit.com>

  * man/es/Makefile.in: Add new dpkg-source.1 manpage.

Sun Apr 25 17:08:57 BST 2004 Scott James Remnant <scott@netsplit.com>

  * man/ja/Makefile.in: Add new dpkg-source.1 manpage.

Sun Apr 25 16:59:09 BST 2004 Scott James Remnant <scott@netsplit.com>

  * configure.in: Add Norwegian Nynorsk and Portugese linguas.

Sun Apr 25 12:27:38 CEST 2004  Tollef Fog Heen  <tfheen@debian.org>

  * main/archive.c: make block and char devices work properly when
    extracting.  mknod can create other kinds of devices than just char
    and block devices, so we need to pass the type of device to mknod in
    the mode argument.

Sun Apr 25 00:46:38 CEST 2004  Tollef Fog Heen  <tfheen@debian.org>

  * split/mksplit.pl: cut off anything after the first piece of whitespace
    when getting the md5sum, since we now get a different-formatted md5sum
    back.  (It now has a trailing dash.)

Sun Apr 25 00:23:27 CEST 2004  Tollef Fog Heen  <tfheen@debian.org>

  * lib/dump.c: Terminate buffer in order to not display garbage when
    displaying dependency fields.
	