@@ -478,9 +478,9 @@ man/en/Makefile
 man/es/Makefile
 man/fr/Makefile
 man/ja/Makefile
+man/pt_BR/Makefile
 man/ru/Makefile
 man/sv/Makefile
-man/pt_BR/Makefile
 scripts/Makefile
 main/Makefile
 dselect/Makefile
