@@ -1,6 +1,7 @@
 dpkg (1.10.22) unstable; urgency=low
 
-  * 
+  * Stop hardcoding the list of manual page languages in debian/rules,
+    so we include Spanish, Russian and Brazilian Portugese.  Closes: #245994.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
