@@ -1,3 +1,10 @@
+Mon Apr 26 18:53:15 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * configure.in: Put the man page directories in alphabetical order.
+  * man/Makefile.in: Likewise
+  * debian/rules: Extract manual page directories from Makefile.in and
+  use that list instead of hardcoding them.
+
 Sun Apr 25 19:00:20 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * version-nr, debian/changelog: Bump version to 1.10.22.
